# self-rtx-ms

./: build_dev_sample.sh
cmake/: rtx-ms-config.cmake  rtx-ms-x86_64-gnu-linux-config.cmake  toolchain_poky_3_1_11_adas.cmake
sample_hello_world/: CMakeLists.txt
sample_hello_world/build_linux_dev_board/: CMakeCache.txt  Makefile  VOUT  cmake_install.cmake  compile_commands.json
sample_vout/: CMakeLists.txt
